src-tauri/src/core/cli/tui/tests/snapshots/agents_inspector_detail.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [working]                |
|╭ subagent ────────────────────────────────────────────────────────────────────╮|
|│ kv-review  (sub-kv-review-1)                                                 │|
|│ 2 tools · 2 req · 75% cached                                                 │|
|│                                                                              │|
|│ Review the key-value store for races.                                        │|
|│                                                                              │|
|│ Reading the store first.                                                     │|
|│ │ ✓ Read src/kv.rs                                                           │|
|│ │   120 lines                                                                │|
|│ > check the lock order too                                                   │|
|│ │ ✗ Ran cargo test kv                                                        │|
|│ │   error: 1 test failed                                                     │|
|│                                                                              │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|────────────────────────────────────────────────────────────────────────────────|
|selecting…                                                                      |
|                                                                                |
|📂 /snapshot/repo                                  m message   x stop   Esc back|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=Yellow
 0 55..64 fg=Cyan mod=BOLD
 1 0..80 fg=#56B6C2
 2 0..1 fg=#56B6C2
 2 2..11 fg=Magenta mod=BOLD
 2 11..30 fg=DarkGray
 2 79..80 fg=#56B6C2
 3 0..1 fg=#56B6C2
 3 2..30 fg=DarkGray
 3 79..80 fg=#56B6C2
 4 0..1 fg=#56B6C2
 4 79..80 fg=#56B6C2
 5 0..1 fg=#56B6C2
 5 2..39 mod=DIM | ITALIC
 5 79..80 fg=#56B6C2
 6 0..1 fg=#56B6C2
 6 79..80 fg=#56B6C2
 7 0..1 fg=#56B6C2
 7 79..80 fg=#56B6C2
 8 0..1 fg=#56B6C2
 8 2..4 fg=DarkGray
 8 4..6 fg=Green
 8 6..20 mod=DIM
 8 79..80 fg=#56B6C2
 9 0..1 fg=#56B6C2
 9 2..15 fg=DarkGray
 9 79..80 fg=#56B6C2
10 0..1 fg=#56B6C2
10 2..28 fg=Magenta mod=BOLD
10 79..80 fg=#56B6C2
11 0..1 fg=#56B6C2
11 2..4 fg=DarkGray
11 4..6 fg=Red
11 6..23 mod=DIM
11 79..80 fg=#56B6C2
12 0..1 fg=#56B6C2
12 2..6 fg=DarkGray
12 6..26 fg=Red
12 79..80 fg=#56B6C2
13 0..1 fg=#56B6C2
13 79..80 fg=#56B6C2
14 0..80 fg=#56B6C2
17 0..10 mod=DIM | ITALIC
19 0..1 fg=DarkGray
19 2..17 fg=DarkGray
19 50..80 mod=DIM
