src-tauri/src/core/cli/tui/tests/snapshots/agents_inspector_detail_rich.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 162
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    ◉ [working]              |
|╭ subagent ────────────────────────────────────────────────────────────────────╮|
|│ kv-review  (sub-kv-review-1)                                                 │|
|│ 3 tools · 3 req · 75% cached                                                 │|
|│                                                                              │|
|│ Review the key-value store for races.                                        │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│                                                                              │|
|│ • I'll check the lock order in src/kv.rs.                                    │|
|│                                                                              │|
|│ ┊ Thought                                                                    │|
|│ • Explored                                                                   │|
|│   └ Read kv.rs                                                               │|
|│     Search lock() in src                                                     │|
|│ • Edited kv.rs (+1 -1)                                                       │|
|│     -        let a = self.a.lock();                                          │|
|│     +        let b = self.b.lock();                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|────────────────────────────────────────────────────────────────────────────────|
|selecting…                                                                      |
|                                                                                |
|📂 /snapshot/repo               PgUp/PgDn scroll   m message   x stop   Esc back|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..57 fg=#56B6C2
 0 57..66 fg=#56B6C2 mod=BOLD
 1 0..80 fg=#56B6C2
 2 0..1 fg=#56B6C2
 2 2..11 fg=Magenta mod=BOLD
 2 11..30 fg=#808080
 2 79..80 fg=#56B6C2
 3 0..1 fg=#56B6C2
 3 2..30 fg=#808080
 3 79..80 fg=#56B6C2
 4 0..1 fg=#56B6C2
 4 79..80 fg=#56B6C2
 5 0..1 fg=#56B6C2
 5 2..39 mod=DIM | ITALIC
 5 79..80 fg=#56B6C2
 6 0..1 fg=#56B6C2
 6 79..80 fg=#56B6C2
 7 0..1 fg=#56B6C2
 7 79..80 fg=#56B6C2
 8 0..1 fg=#56B6C2
 8 79..80 fg=#56B6C2
 9 0..1 fg=#56B6C2
 9 79..80 fg=#56B6C2
10 0..1 fg=#56B6C2
10 79..80 fg=#56B6C2
11 0..1 fg=#56B6C2
11 79..80 fg=#56B6C2
12 0..1 fg=#56B6C2
12 79..80 fg=#56B6C2
13 0..1 fg=#56B6C2
13 79..80 fg=#56B6C2
14 0..1 fg=#56B6C2
14 79..80 fg=#56B6C2
15 0..1 fg=#56B6C2
15 2..4 mod=DIM
15 19..29 fg=#FFA500 mod=BOLD
15 33..42 fg=Cyan
15 79..80 fg=#56B6C2
16 0..1 fg=#56B6C2
16 79..80 fg=#56B6C2
17 0..1 fg=#56B6C2
17 2..4 fg=DarkGray
17 4..11 mod=DIM | ITALIC
17 79..80 fg=#56B6C2
18 0..1 fg=#56B6C2
18 2..4 fg=#98C379 mod=BOLD
18 4..12 mod=BOLD
18 79..80 fg=#56B6C2
19 0..1 fg=#56B6C2
19 2..6 fg=DarkGray
19 6..10 fg=#56B6C2
19 79..80 fg=#56B6C2
20 0..1 fg=#56B6C2
20 2..6 fg=DarkGray
20 6..12 fg=#56B6C2
20 19..23 fg=DarkGray
20 79..80 fg=#56B6C2
21 0..1 fg=#56B6C2
21 2..4 fg=#98C379 mod=BOLD
21 4..10 mod=BOLD
21 16..18 fg=DarkGray
21 18..20 fg=Green
21 20..21 fg=DarkGray
21 21..23 fg=Red
21 23..24 fg=DarkGray
21 79..80 fg=#56B6C2
22 0..1 fg=#56B6C2
22 6..7 fg=Red bg=#421A1E mod=BOLD
22 7..15 fg=#C0C5CE bg=#421A1E
22 15..18 fg=#B48EAD bg=#421A1E
22 18..23 fg=#C0C5CE bg=#421A1E
22 23..27 fg=#BF616A bg=#421A1E
22 27..30 fg=#C0C5CE bg=#421A1E
22 30..34 fg=#96B5B4 bg=#421A1E
22 34..37 fg=#C0C5CE bg=#421A1E
22 37..77 bg=#421A1E
22 79..80 fg=#56B6C2
23 0..1 fg=#56B6C2
23 6..7 fg=Green bg=#163420 mod=BOLD
23 7..15 fg=#C0C5CE bg=#163420
23 15..18 fg=#B48EAD bg=#163420
23 18..23 fg=#C0C5CE bg=#163420
23 23..27 fg=#BF616A bg=#163420
23 27..30 fg=#C0C5CE bg=#163420
23 30..34 fg=#96B5B4 bg=#163420
23 34..37 fg=#C0C5CE bg=#163420
23 37..77 bg=#163420
23 79..80 fg=#56B6C2
24 0..80 fg=#56B6C2
27 0..10 mod=DIM | ITALIC
29 0..1 fg=#808080
29 2..17 fg=#808080
29 31..80 mod=DIM
