src-tauri/src/core/cli/tui/tests/snapshots/agents_inspector_list.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 163
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [working]                          |
|┌ subagents ─────────────────────────────────────────────────────────────────────────────┐|
|│▶ kv-review  ·  4t  ·  75% cached  ·  read src/mod_3.rs                                 │|
|│  perf-scan  ·  3t  ·  0% cached  ·  read src/mod_2.rs                                  │|
|│  lint-fix  ·  1t  ·  read src/mod_0.rs                                                 │|
|│  docs-writer  ·  0t  ·  queued (1)                                                     │|
|│  collector  ·  0t  ·  phase 2 (waiting)                                                │|
|│                                                                                        │|
|│                                                                                        │|
|│                                                                                        │|
|└────────────────────────────────────────────────────────────────────────────────────────┘|
|                                                                                          |
|──────────────────────────────────────────────────────────────────────────────────────────|
|selecting…                                                                                |
|                                                                                          |
|📂 /snapshot/repo                 ↑/↓ select   Enter view   m message   x stop   Esc close|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=Yellow
 0 55..64 fg=Cyan mod=BOLD
 2 1..89 fg=Cyan mod=BOLD
13 0..10 mod=DIM | ITALIC
15 0..1 fg=DarkGray
15 2..17 fg=DarkGray
15 33..90 mod=DIM
