src-tauri/src/core/cli/tui/tests/snapshots/bg_shells_row.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    ● [ready]                |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|────────────────────────────────────────────────────────────────────────────────|
| 2 background shells running · /shells to view · /stop to close                 |
|>   Type here to chat with agent                                                |
|                                                                                |
|📂 /snapshot/repo                                                               |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..64 fg=#98C379
 4 0..31 fg=#808080
 4 31..38 fg=#56B6C2
 4 38..49 fg=#808080
 4 49..54 fg=#56B6C2
 4 54..63 fg=#808080
 5 0..2 fg=#56B6C2 mod=BOLD
 5 2..3 mod=REVERSED
 5 4..32 mod=DIM | ITALIC
 7 0..1 fg=#808080
 7 2..17 fg=#808080
