src-tauri/src/core/cli/tui/tests/snapshots/header_idle_ready.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 163
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [ready]                                      |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=Yellow
 0 55..62 fg=Green
