src-tauri/src/core/cli/tui/tests/snapshots/header_running_thinking_reduced_motion.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [thinking]                                   |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..65 fg=#E5C07B mod=BOLD
