src-tauri/src/core/cli/tui/tests/snapshots/header_running_working_with_turn_and_cache.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  turn 3/20  ctx 41K/128K fallback  cache 42%  [working]               |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 65..74 fg=#56B6C2
 0 76..85 fg=#56B6C2 mod=BOLD
